objects/ccrz__E_ConfigurationMeta__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__APIName__c</fullName>
        <description>The API name of the configuration for lookup purposes. For example, the configuration My Inventory Enabled might be mainv and used in code for lookup.  Must be unique within a given module but not universally unique.

Note that the APIName cannot uniquely identify the meta-data.</description>
        <externalId>true</externalId>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ConfigurationMetaId__c</fullName>
        <description>External id.  Not used by B2B Commerce.</description>
        <externalId>true</externalId>
        <label>Configuration Meta Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ConfigurationModule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the module for this configuration.</description>
        <label>CC Configuration Module</label>
        <referenceTo>ccrz__E_ConfigurationModule__c</referenceTo>
        <relationshipName>ConfigurationMeta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Description__c</fullName>
        <description>Meta-data description visible to the user.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ExternallySafe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this configuration safe to be exported outside of B2B Commerce.
For example, a configuration to hide/display the cart amount in the header would be ExternallySafe = true. A configuration storing a connection string to an external system would be ExternallySafe = false.</description>
        <label>Externally Safe</label>
        <type>Checkbox</type>
    </fields>
    <label>CC Configuration Metadata</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Configuration Metadata</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>